Bug 43366 - No sound from headphone jack on intel-hda Realtek ALC889A (regression)
Summary: No sound from headphone jack on intel-hda Realtek ALC889A (regression)
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-12 08:54 UTC by Thomas Zwaagstra
Modified: 2012-07-01 09:43 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.4.0-rc2
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
alsa-info output with working headphones (30.42 KB, text/plain)
2012-06-12 08:55 UTC, Thomas Zwaagstra
Details
alsa-info output with NON-working headphones (15.65 KB, text/plain)
2012-06-12 08:55 UTC, Thomas Zwaagstra
Details
Fix patch (1.49 KB, patch)
2012-06-13 14:52 UTC, Takashi Iwai
Details | Diff

Description Thomas Zwaagstra 2012-06-12 08:54:16 UTC
intel-hda Realtek ALC889A on macbook pro 5,2

After kernel 3.4.0-rc2, no sound comes through the headphone jack.  Otherwise sound still appears to work with internal speakers.

After a git bisect, this appears to be the breaking commit:

http://git.kernel.org/?p=linux/kernel/git/torvalds/linux.git;a=commit;h=23d30f28275ddd7fdb87f265e9a440baf4a4cf09

I have tried various "model=" options, but without luck.

lspci:
00:08.0 Audio device: nVidia Corporation MCP79 High Definition Audio (rev b1)

lspci -n
00:08.0 0403: 10de:0ac0 (rev b1)
Comment 1 Thomas Zwaagstra 2012-06-12 08:55:31 UTC
Created attachment 73568 [details]
alsa-info output with working headphones
Comment 2 Thomas Zwaagstra 2012-06-12 08:55:52 UTC
Created attachment 73569 [details]
alsa-info output with NON-working headphones
Comment 3 Takashi Iwai 2012-06-13 14:51:55 UTC
My bad, this was a simple overlook.  Try the patch below.
Comment 4 Takashi Iwai 2012-06-13 14:52:20 UTC
Created attachment 73581 [details]
Fix patch
Comment 5 Thomas Zwaagstra 2012-06-13 15:52:08 UTC
Applied patch the patch, and I can confirm that it has solved the issue.  Headphone audio now works as expected.

Thank you Mr Iwai!
Comment 6 Florian Mickler 2012-07-01 09:43:12 UTC
A patch referencing this bug report has been merged in Linux v3.5-rc3:

commit 2e8b2b29d1f904353c3e54b342ccb8c66390dab8
Author: Takashi Iwai <tiwai@suse.de>
Date:   Wed Jun 13 16:47:32 2012 +0200

    ALSA: hda - Don't forget to call init verbs added by fixup list

Note You need to log in before you can comment on or make changes to this bug.